[package]
name = "wiki-o"
version = "0.1.0"
authors = ["Dorian Davì"]
homepage = "https://github.com/doriancodes/wiki-o"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
clap = "4.5.2"
colored = "2.1.0"
csv = "1.3.0"
home = "0.5.9"
serde = "1.0.197"
serde_derive = "1.0.197"
toml = "0.8.10"
uuid = {version = "1.7.0", features = ["v4"] }
