[package]
name = "wiki-o"
version = "0.1.0"
authors = ["Dorian Davì"]
homepage = "https://github.com/doriancodes/wiki-o"
edition = "2021"

[[bin]]
name = "wo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
clap = { version = "4.5.3", features = ["derive"] }
colored = "2.1.0"
home = "0.5.9"
serde = "1.0.197"
serde_derive = "1.0.197"
tempfile = "3.10.1"
toml = "0.8.10"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"


